--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 body {
   line-height: 1.2;
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif !important;
   -webkit-font-smoothing: antialiased;
   font-size: 15px;
   color: #5c5c77;
